FIXED:styling and wrapping added for menu using FLEXBOX layout

--- a/src/app/body/body.component.css
+++ b/src/app/body/body.component.css
@@ -1,7 +1,8 @@
 
 .example-card {
   max-width: 100%;
-  margin:1.5em 3em;
+  margin:6em 3em 1.5em 3em;
+
 }
 
 
