--- a/src/app/toolbar/toolbar.component.css
+++ b/src/app/toolbar/toolbar.component.css
@@ -2,8 +2,25 @@
   padding: 0 14px;
 }
 
-.example-spacer {
-  flex: 1 1 auto;
+.example-toolbar{
+  position: fixed;
+  top:0px;
+  right:0px;
+  left:0px;
+  z-index: 2;
+  box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12);
+}
+
+.example-toolbar-row{
+  display:flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  height: auto;
+}
+
+.example-menu{
+  display:flex;
+  flex-wrap: wrap;
 }
 
 .site-logo{
@@ -15,6 +32,7 @@
   height: 2.3em;
   background:white;
   border-radius: 2em;
+  margin-top:0.5em;
 }
 
 button{
